package main;

option go_package = "securechat-server/grpc";

service ServerComms{
  rpc join(ID) returns (ID);

  rpc getSuccessor(ID) returns (ID);

  rpc getPredecessor(ID) returns (ID);

  rpc changeSuccessor(ChangeSuccessor) returns (Response);

  rpc changePredecessor(ChangePredecessor) returns (Response);

  rpc hi(test) returns (test);
}

message test{
  required string message = 1;
}

// ID for server. Contains address and SHA-1 hash of address
message ID{
  required string address = 1;
  required bytes id = 2;
}

message ChangeSuccessor{
  required ID id = 1;
  required ID newSuccessor = 2;
}

message ChangePredecessor{
  required ID id = 1;
  required ID newPredecessor = 2;
}

message Response{}

